# Ising

./: README.md  __init__.py  dualgraphising.py  pyproject.toml  studentgraph.py  utils.py
Ising/: __init__.py  cachefile.py  directedgraphising.py  dualgraphising.py  gifcache.py  graphising.py  normalising.py  studentgraph.py  utils.py
